# nodeaddon_cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  addon.js  occt.cc  occt.h  package-lock.json  package.json  win_delay_load_hook.cc
